tests/snapshots/snapshots__editor_with_an_opened_rust_file.snap
---
source: tests/snapshots.rs
expression: screen
---
 Vix  File  Edit  View  Go  Run  AI  DB  JJ  Git  Org  Project  Tools  Help                                                                                                                                              
  Explorer ─────────────────╮  untitled │  main.rs                                                                                                                                       ╭  Messages ───────────────────
 src                        │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│ Welcome to Vix. Press Ctrl P
 Cargo.toml                 │    1  struct Point {                                                                                                                                        ●│ Ctrl B toggles the file explo
 README.md                  │    2  │   x: i32,                                                                                                                                           ││
                             │    3  │   y: i32,                                                                                                                                           ││
                             │    4  }                                                                                                                                                     ││
                             │    5                                                                                                                                                        ││
                             │    6  fn main() {                                                                                                                                           ││
                             │    7  │   let p = Point { x: 1, y: 2 };                                                                                                                     ││
                             │    8  │   println!("{p:?}");                                                                                                                                ││
                             │    9  }                                                                                                                                                     ││
                             │   10                                                                                                                                                        ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││●──────────────────────────────
  Output ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
(no output yet)







────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 <root>/src/main.rs  —  Opened <root>/src/main.rs                                                                  rust  LF  UTF-8   Ln 1:Col 1   
