tests/snapshots/snapshots__editor_with_typed_rust_source.snap
---
source: tests/snapshots.rs
expression: screen
---
 Vix  File  Edit  View  Go  Run  AI  DB  JJ  Git  Org  Project  Tools  Help                      
  Explorer ─────────────────╮  untitled                          ╭  Messages ───────────────────
 agents                    ●│──────────────────────────────────────│ Welcome to Vix. Press Ctrl P
 benches                   ││    1  fn main() {                   ││ Ctrl B toggles the file explo
 bin                       ││    2  │   println!("hi");           ││
 config                    ││    3  │   }                         ││
 crates                    ││    4  │                             ││
 dictionaries              ││                                     ││
 docs                      ││                                     ││
 examples                  ││                                     ││
 fuzz                      ││                                     ││
 keymaps                   ││                                     ││
 locales                   ││                                     ││
 scripts                   ││                                     ││
 spec                      ││                                     ││
 src                       ││                                     ││
 target                    ││                                     ││
 test-data                 ││                                     ││
 tests                     ││                                     ●│●──────────────────────────────
  Output ──────────────────────────────────────────────────────────────────────────────────────────
(no output yet)







────────────────────────────────────────────────────────────────────────────────────────────────────
 untitled   —  Ready                                              text  LF  UTF-8   Ln 4:Col 5   
