tests/snapshots/snapshots__find_bar_with_matches.snap
---
source: tests/snapshots.rs
expression: screen
---
 Vix  File  Edit  View  Go  Run  AI  DB  JJ  Git  Org  Project  Tools  Help                                                                                                                                              
  Explorer ─────────────────╮  ╭  Find ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ ╭  Messages ───────────────────
 src                        │───│❯ Find main                                                                                                                                             │─│ Welcome to Vix. Press Ctrl P
 Cargo.toml                 │   │Match 4 of 4)   Smart (Alt S)   Word (Alt W)   Regex (Alt R)   Replace   In: Buffer                                                                     │││ Ctrl B toggles the file explo
 README.md                  │   ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯││
                             │    3  │   println!("{main_result}");                                                                                                                        ││
                             │    4  }                                                                                                                                                     ││
                             │    5                                                                                                                                                        ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ●│
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││
                             │                                                                                                                                                             ││●──────────────────────────────
  Output ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
(no output yet)







────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 <root>/src/main.rs  —  Opened <root>/src/main.rs                                                                rust  LF  UTF-8   Sel 4 (1L)   Ln 3:Col 16   
