tests/snapshots/snapshots__table_edit_surface.snap
---
source: tests/snapshots.rs
expression: screen
---
╭  Edit Table ────────────────────────────────────────────────────────────────────────────────────╮
│name  role                                                                                        │
│Ada   Engineer                                                                                    │
│Grace Admiral                                                                                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ r1/3 c1/2  ↑↓←→ move   Enter edit   Alt+↑↓ row   Alt+←→ col   s sort   / find   ^S save   q close│
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
