tests/snapshots/snapshots__zen_mode_hides_the_docks.snap
---
source: tests/snapshots.rs
expression: screen
---
 Vix  File  Edit  View  Go  Run  AI  DB  JJ  Git  Org  Project  Tools  Help                      
  untitled 
────────────────────────────────────────────────────────────────────────────────────────────────────
    1  fn main() {}                                                                                │
    2                                                                                              │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   │
                                                                                                   ●
